// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content DocumentFragment is injected into the tippy node 1`] = `
<div
  class="__NAMESPACE_PREFIX__-content"
  data-state="hidden"
>
  <button
    class="__tippy"
  />
</div>
`;

exports[`content Element is injected into the tippy node 1`] = `
<div
  class="__NAMESPACE_PREFIX__-content"
  data-state="visible"
  style="transition-duration: 0ms;"
>
  <button
    class="__tippy"
  >
    string
  </button>
</div>
`;

exports[`content Function is injected into the tippy node 1`] = `
<div
  class="__NAMESPACE_PREFIX__-content"
  data-state="visible"
  style="transition-duration: 0ms;"
>
  string
</div>
`;

exports[`content string is injected into the tippy node 1`] = `
<div
  class="__NAMESPACE_PREFIX__-content"
  data-state="visible"
  style="transition-duration: 0ms;"
>
  string
</div>
`;

exports[`popperOptions merges modifiers correctly 1`] = `
Array [
  Object {
    "data": Object {},
    "enabled": true,
    "fn": [Function],
    "name": "popperOffsets",
    "phase": "read",
  },
  Object {
    "data": Object {
      "_skip": false,
    },
    "enabled": true,
    "fn": [Function],
    "name": "flip",
    "options": Object {
      "fallbackPlacements": Array [
        "right",
      ],
      "padding": 5,
    },
    "phase": "main",
    "requiresIfExists": Array [
      "offset",
    ],
  },
  Object {
    "data": Object {},
    "enabled": true,
    "fn": [Function],
    "name": "preventOverflow",
    "options": Object {
      "padding": Object {
        "bottom": 2,
        "left": 5,
        "right": 5,
        "top": 2,
      },
      "rootBoundary": "document",
    },
    "phase": "main",
    "requiresIfExists": Array [
      "offset",
    ],
  },
  Object {
    "data": Object {},
    "effect": [Function],
    "enabled": true,
    "fn": [Function],
    "name": "arrow",
    "options": Object {
      "element": <div
        class="__NAMESPACE_PREFIX__-arrow"
        style="position: absolute; left: 0px; transform: translate(999px, 0px);"
      />,
      "padding": 999,
    },
    "phase": "main",
    "requires": Array [
      "popperOffsets",
    ],
    "requiresIfExists": Array [
      "preventOverflow",
    ],
  },
  Object {
    "enabled": true,
    "fn": [Function],
    "name": "hide",
    "phase": "main",
    "requiresIfExists": Array [
      "preventOverflow",
    ],
  },
  Object {
    "data": Object {},
    "enabled": true,
    "fn": [Function],
    "name": "computeStyles",
    "options": Object {
      "adaptive": true,
    },
    "phase": "beforeWrite",
  },
  Object {
    "enabled": true,
    "fn": [Function],
    "name": "$$tippy",
    "phase": "beforeWrite",
    "requires": Array [
      "computeStyles",
    ],
  },
  Object {
    "data": Object {},
    "effect": [Function],
    "enabled": true,
    "fn": [Function],
    "name": "eventListeners",
    "phase": "write",
  },
  Object {
    "effect": [Function],
    "enabled": true,
    "fn": [Function],
    "name": "applyStyles",
    "phase": "write",
    "requires": Array [
      "computeStyles",
    ],
  },
]
`;
